--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
 
         <!-- Firebase Messaging Service -->
         <service
-            android:name=".MyFirebaseMessagingService"
+            android:name=".repository.MyFirebaseMessagingService"
             android:exported="false"
             tools:ignore="Instantiatable">
             <intent-filter>
