--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,8 @@
 [versions]
-agp = "8.8.2"
+agp = "8.9.2"
+googleApiClientAndroidVersion = "1.34.0"
+googleApiClientGson = "1.34.0"
+googleOauthClientJettyVersion = "1.34.0"
 kotlin = "2.0.0"
 composeCompiler = "1.6.10"
 
