--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,31 +5,35 @@ composeCompiler = "1.6.10"
 
 firebaseBom = "33.13.0"
 firebaseMessaging = "24.1.1"
+firebaseDatabaseKtx = "21.0.0"
 
 googleApiClientAndroid = "1.33.0"
-googleApiClientVersion = "2.5.0"
 googleApiClient = "1.35.0"
-googleApiServicesCalendar = "v3-rev305-1.25.0"
+googleApiClientVersion = "2.5.0"
 googleGoogleHttpClientGson = "1.42.3"
 googleHttpClient = "1.45.2"
 googleOauthClientJetty = "1.33.0"
 googleAuthLibraryOauth2Http = "1.12.0"
 
+daggerVersion = "2.48"
 coreKtx = "1.15.0"
 lifecycleRuntimeKtx = "2.8.7"
 lifecycleViewmodelKtx = "2.8.7"
 activityCompose = "1.10.1"
-
 composeBom = "2024.04.01"
+navigationCompose = "2.8.9"
+appcompat = "1.7.0"
 
 junit = "4.13.2"
 androidxJunit = "1.2.1"
 espressoCore = "3.6.1"
 
-googleServices = "4.4.1"
-navigationCompose = "2.8.9"
-appcompat = "1.7.0"
-firebaseDatabaseKtx = "21.0.0"
+[plugins]
+android-application = { id = "com.android.application", version.ref = "agp" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+google-services = { id = "com.google.gms.google-services", version = "4.4.1" }
+
 [libraries]
 # Core
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -38,15 +42,17 @@ androidx-activity-compose = { group = "androidx.activity", name = "activity-comp
 
 # Compose
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
-androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-androidx-ui-text = { module = "androidx.compose.ui:ui-text" }
+androidx-ui-text = { group = "androidx.compose.ui", name = "ui-text" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+
+# ViewModel
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelKtx" }
 androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
 
@@ -55,32 +61,22 @@ firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.r
 firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics" }
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore" }
 firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging", version.ref = "firebaseMessaging" }
+firebase-database-ktx = { group = "com.google.firebase", name = "firebase-database-ktx", version.ref = "firebaseDatabaseKtx" }
 
 # Google API & Auth
 google-api-client-android = { group = "com.google.api-client", name = "google-api-client-android", version.ref = "googleApiClientAndroid" }
 google-api-client = { group = "com.google.api-client", name = "google-api-client", version.ref = "googleApiClient" }
-google-api-client-android-v1340 = { module = "com.google.api-client:google-api-client-android", version.ref = "googleApiClientAndroidVersion" }
-google-api-client-gson = { module = "com.google.api-client:google-api-client-gson", version.ref = "googleApiClientGson" }
 google-api-client-v250 = { group = "com.google.api-client", name = "google-api-client", version.ref = "googleApiClientVersion" }
 google-api-services-calendar = { group = "com.google.apis", name = "google-api-services-calendar", version = "v3-rev305-1.32.1" }
 google-oauth-client-jetty = { group = "com.google.oauth-client", name = "google-oauth-client-jetty", version.ref = "googleOauthClientJetty" }
 google-http-client = { group = "com.google.http-client", name = "google-http-client", version.ref = "googleHttpClient" }
-google-http-client-gson = { group = "com.google.http-client", name = "google-http-client-gson", version.ref = "googleGoogleHttpClientGson" }
+google-api-client-gson = { group = "com.google.api-client", name = "google-api-client-gson", version = "1.34.0" }
 google-auth-library-oauth2-http = { group = "com.google.auth", name = "google-auth-library-oauth2-http", version.ref = "googleAuthLibraryOauth2Http" }
 
 # Testing
-google-oauth-client-jetty-v1340 = { module = "com.google.oauth-client:google-oauth-client-jetty", version.ref = "googleOauthClientJettyVersion" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidxJunit" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
-material3 = { module = "androidx.compose.material3:material3" }
-ui = { module = "androidx.compose.ui:ui" }
+
+# Support
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
-firebase-database-ktx = { group = "com.google.firebase", name = "firebase-database-ktx", version.ref = "firebaseDatabaseKtx" }
-
-[plugins]
-android-application = { id = "com.android.application", version.ref = "agp" }
-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-google-services = { id = "com.google.gms.google-services", version.ref = "googleServices" }
-
